Fix dropdowns overflow in mobile

--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,12 @@
     direction: rtl;
     -webkit-text-size-adjust: 100%;
     text-size-adjust: 100%;
+    overflow-x: hidden;
+  }
+
+  #root {
+    overflow-x: hidden;
+    max-width: 100vw;
   }
 }
 
